<resources>
    <string name="app_name">SmileMakers</string>
    <string name="lbl_e_mail">E-mail</string>
    <string name="lbl_password">Password*</string>
    <string name="lbl_phone">Mobile Number*</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="january">January</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_total_patients">Total Patients</string>
    <string name="lbl_total_admin">Total Admins</string>
    <string name="GOOGLE_API_KEY">AIzaSyBMAD8TRAXSAhr3u9pJ3AGIuKs-vm2qMHw</string>
    <string name="lbl_total_doctors">Total Doctors</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="regis_area">Registration Area</string>
    <string name="type_treatmnt">Types of Treatment</string>
    <string name="shift">Shift</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="new_event">New Appointment</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="regular_event">Regular Appointment</string>
    <string name="no_upcoming_events"><![CDATA[Seems like you don\'t have any upcoming Appointments.]]></string>
    <string name="all_day">All-Day</string>
    <string name="public_event_notification_text">An Appointment is upcoming</string>
    <string name="going">Going</string>
    <string name="not_going">Not Going</string>
    <string name="maybe_going">Maybe Going</string>
    <string name="invited">Invited</string>
    <string name="my_status">My Status :</string>
    <string name="please_fill_location"><![CDATA[<string name=\"please_fill_location\">Please fill in a location to be shown on a map</string>
    <string name="insufficient_permissions">You are not allowed to write in the selected calendar</string>
    <string name="end_before_start">The Appointment cannot end earlier than it starts</string>
    <string name="title_empty">Please Select Patient Name From The List Only</string>
    <string name="store_locally_only">Store Locally Only</string>
    <string name="add_another_reminder">Add Another Remider</string>
    <string name="the_same_day">The Same Day</string>
    <string name="the_last_day">The Last Day</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_on">Repeat On</string>
    <string name="every_day">Every day</string>
    <string name="monday_alt">Monday</string>
    <string name="tuesday_alt">Tuesday</string>
    <string name="wednesday_alt">Wednesday</string>
    <string name="thursday_alt">Thursday</string>
    <string name="friday_alt">Friday</string>
    <string name="saturday_alt">Saturday</string>
    <string name="sunday_alt">Sunday</string>
    <string name="repeat_every_m">Repeat every</string>
    <string name="every_m">Every</string>
    <string name="first_m">first</string>
    <string name="second_m">second</string>
    <string name="third_m">third</string>
    <string name="fourth_m">fourth</string>
    <string name="last_m">last</string>
    <string name="repeat_every_f">Repeat every</string>
    <string name="every_f">Every</string>
    <string name="first_f">first</string>
    <string name="second_f">second</string>
    <string name="third_f">third</string>
    <string name="fourth_f">fourth</string>
    <string name="last_f">last</string>
    <string name="repeat_on_the_same_day_monthly">Repeat on the same day each month</string>
    <string name="repeat_on_the_last_day_monthly">Repeat on the last day of the month</string>
    <string name="repeat_on_the_same_day_yearly">Repeat on the same day every year</string>
    <string name="times">Times</string>
    <string name="repeat_till">Repeat Till</string>
    <string name="forever">Forever</string>
    <string name="edit_event">Edit Appointment</string>
    <string name="select_a_different_caldav_color">Select a different color (might be applied locally only)</string>
    <string name="last_used_one">Last Used One</string>
    <string name="add_new_type">Add New Type</string>
    <string name="type_already_exists">Type with this title already exists</string>
    <string name="editing_calendar_failed">Editing Calendar Failed</string>
    <string name="edit_type">Edit Type</string>
    <string name="color">Color</string>
    <string name="repeat_till_date">Repeat Till A Date</string>
    <string name="stop_repeating_after_x">Stop repeating after x occurrences</string>
    <string name="repeat_forever">Repeat Forever</string>
    <string name="no_repetition">No Repetation</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="event_is_repeatable">The Appointment is repeatable</string>
    <string name="update_one_only">Update the selected occurrence only</string>
    <string name="update_all_occurrences">Update all occurrences</string>
    <string name="weeks_raw">weeks</string>
    <string name="months_raw">months</string>
    <string name="years_raw">years</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="add_another_attendee">Add Another Attendee</string>
    <string name="duplicate_event">Duplicate Appointment</string>
    <string name="enter_a_country">Enter a country or time zone</string>
    <string name="selection_contains_repetition">The selection contains repeating Appointments</string>
    <string name="delete_one_only">Delete the selected occurrence only</string>
    <string name="delete_future_occurrences">Delete this and all future occurrences</string>
    <string name="delete_all_occurrences">Delete all occurrences</string>
    <string name="holidays_imported_successfully">imported</string>
    <string name="importing_some_holidays_failed">partial failed</string>
    <string name="importing_holidays_failed">failed</string>
    <string name="bapunagar">Bapunagar</string>
    <string name="nikol">Nikol</string>
    <string name="seat1">Seat 1</string>
    <string name="seat2">Seat 2</string>
    <string name="doctors">Doctors</string>
    <string name="not_avail_bapunagar">Only 2 slots allowed in same time in Bapunagar</string>
    <string name="not_avail_nikol">Only 2 slots allowed in same time in Nikol</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="not_selected_area">Please Select Area</string>
    <string name="branch_error">Please Select Branch First</string>
    <string name="empty_mob_no">Please enter mobile number</string>
    <string name="empty_altmob_no">Please enter Alternate mobile number</string>
    <string name="valid_mob_no">Please enter valid mobile number</string>
    <string name="valid_altmob_no">Please enter valid Alternate mobile number</string>
    <string name="empty_pwd">Please enter password</string>
    <string name="valid_pwd">Password must have at least 4 characters</string>
    <string name="mydb_name">MyDayabase.db</string>
    <string name="india_holiday_file">india.ics</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="date_format2">dd-MMM-yyyy</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="add_patient">Add Patient</string>
    <string name="contact">Contact Details</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="appointment">Appointment</string>
    <string name="profile">Profile</string>
    <string name="invalid_time">Please Select Valid Time</string>
    <string name="patient_detail">Patient Detail</string>
    <string name="empty_presc">Please Add Remark</string>
    <string name="date_error">Please Select Today Date/After Today</string>
    <string name="edit">Edit</string>
    <string name="empty_email">"Please Enter Email "</string>
    <string name="empty_location">Please Enter Location</string>
    <string name="empty_bio">Please Enter Bio</string>
    <string name="empty_lname">Please Enter Last Name</string>
    <string name="empty_fname">PLease Enter First Name</string>
    <string name="empty_cpwd">Please Enter Current Password</string>
    <string name="empty_npwd">Please Enter New Password</string>
    <string name="empty_cfpwd">Please Enter Confirm Password</string>
    <string name="pwd_match_error">New And Confirm Password Not Match</string>
    <string name="lbl_otp">OTP*</string>
    <string name="lbl_new_password">New Password*</string>
    <string name="lbl_confirm_password">Confirm Password*</string>
    <string name="empty_otp">Please Enter OTP</string>
    <string name="empty_dob">Please Enter DOB</string>
    <string name="empty_age">Please Enter Age</string>
    <string name="empty_ref_id">Please Enter Reference Id</string>
    <string name="empty_ref_name">Please Enter Reference Name</string>
    <string name="empty_adr">Please Enter Address</string>
    <string name="empty_city">Please Enter City</string>
    <string name="empty_state">Please Enter State</string>
    <string name="empty_pincode">Please Enter Pin Code</string>
    <string name="empty_country">Please Enter Country</string>
    <string name="empty_education">Please Enter Education</string>
    <string name="valid_email">InValid Email</string>
    <string name="is_logged_in">logged In Status</string>
    <string-array name="user_type">
        <item>Patient</item>
        <item>Doctor</item>
        <item>Admin</item>
    </string-array>
    <string name="user_id">userid</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="image">image</string>
    <string name="empty_image">Plase Select Image</string>
    <string name="empty_gender">Please Select Gender</string>
    <string name="clinic">Clinic</string>
    <string name="age">Age</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="dob">DOB*</string>
    <string name="education">Education*</string>
    <string name="educatio">Education</string>
    <string name="email_id">Email ID*</string>
    <string name="lbl_mobilno">Mobile Number*</string>
    <string name="lbl_age">Age*</string>
    <string name="lbl_gender">Gender*</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="address">Address</string>
    <string name="cb_tc_txt"><![CDATA[I agree to the]]></string>
    <string name="tc_txt"><u>Terms &amp; Conditions</u></string>
</resources>