<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.smilemakers.ui.login.LoginVM" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root_layout">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/transparentWhite"
            app:cardCornerRadius="@dimen/space_8"
            android:layout_margin="@dimen/space_24"
            android:layout_gravity="center_vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.login.LoginActivity"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/login_app_logo"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_40"
                    android:adjustViewBounds="true"
                    android:src="@drawable/login_img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/sp_user_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_50"
                    android:layout_marginTop="@dimen/space_50"
                    android:background="@drawable/color_primary_rounded_border"
                    android:prompt="@string/user_type"
                    android:layout_marginStart="@dimen/space_16"
                    android:layout_marginEnd="@dimen/space_16"
                    android:spinnerMode="dialog"
                    android:textSize="@dimen/text_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView" />


                <EditText
                    style="@style/EditTextStyle"
                    android:id="@+id/ed_login_mobile_number"
                    android:layout_marginTop="@dimen/space_10"
                    android:inputType="phone"
                    android:text="@={vm.mobileNumber}"
                    android:maxLength="12"
                    android:hint="@string/lbl_phone"
                    android:drawableEnd="@drawable/ic_phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sp_user_type" />

                <EditText
                    style="@style/EditTextStyle"
                    android:id="@+id/ed_login_password"
                    android:layout_marginTop="@dimen/space_10"
                    android:text="@={vm.password}"
                    android:inputType="textPassword"
                    android:hint="@string/lbl_password"
                    android:drawableEnd="@drawable/ic_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ed_login_mobile_number" />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_forgot_password"
                    android:layout_marginTop="@dimen/space_5"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone"
                    android:textSize="@dimen/text_16"
                    android:onClick="@{vm::onForgotPasswordClick}"
                    app:layout_constraintEnd_toEndOf="@id/sp_user_type"
                    app:layout_constraintTop_toBottomOf="@id/ed_login_password" />

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_10"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/ed_login_password">

                    <CheckBox
                        android:id="@+id/cb_tc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_tc_txt"
                        android:textSize="@dimen/text_16"
                        android:checked="@={vm.isChecked}"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tc_txt"
                        android:layout_marginStart="@dimen/space_5"
                        android:textSize="@dimen/text_16"
                        android:onClick="@{vm::onTcClick}"
                        android:textColor="@color/blue_A200"
                        />
                </LinearLayout>
<!--  "-->
                <Button
                    android:id="@+id/button"
                    android:layout_width="@dimen/btn_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_15"
                    android:layout_marginEnd="@dimen/space_16"
                    android:layout_marginBottom="@dimen/space_40"
                    android:padding="@dimen/space_10"
                    android:text="@string/btn_login"
                    android:textSize="@dimen/text_18"
                    android:onClick="@{vm::onLoginClick}"
                    android:textAllCaps="false"
                    android:background="@drawable/login_button_drawable"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>
