<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.smilemakers.dashBoard.doctorFragment.detail.DetailFragmentVM" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".dashBoard.doctorFragment.detail.DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_drawable_grey_ligh"
            android:padding="@dimen/space_12"
            >

            <EditText
                android:id="@+id/ed_patient_referral_name"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/space_0"
                android:layout_marginEnd="@dimen/space_0"
                android:hint="Email ID"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ed_patient_mobile"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/space_0"
                android:layout_marginTop="@dimen/space_12"
                android:layout_marginEnd="@dimen/space_0"
                android:hint="Mobile Number*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_patient_referral_name" />

            <Spinner
                android:id="@+id/sp_regis_area"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:background="@drawable/color_primary_rounded_border"
                android:prompt="@string/regis_area"
                android:spinnerMode="dialog"
                android:layout_marginTop="@dimen/space_12"
                android:textSize="@dimen/text_14"
                app:layout_constraintTop_toBottomOf="@id/ed_patient_mobile" />

            <Spinner
                android:id="@+id/sp_type_treatmnt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:background="@drawable/color_primary_rounded_border"
                android:prompt="@string/type_treatmnt"
                android:spinnerMode="dialog"
                android:textSize="@dimen/text_14"
                android:layout_marginTop="@dimen/space_12"
                app:layout_constraintTop_toBottomOf="@+id/sp_regis_area"  />

            <LinearLayout
                android:id="@+id/ll_shift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_0"
                android:layout_marginTop="@dimen/space_12"
                android:layout_marginEnd="@dimen/space_8"
                android:background="@drawable/color_primary_rounded_border"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/sp_type_treatmnt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:paddingStart="@dimen/space_8"
                    android:paddingTop="@dimen/space_8"
                    android:text="@string/shift"
                    android:textColor="@color/quantum_grey"
                    android:textSize="@dimen/text_18" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/space_8"
                    android:paddingBottom="@dimen/space_8"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/first"
                        android:textSize="@dimen/text_16" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/second"
                        android:textSize="@dimen/text_16" />

                </RadioGroup>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:background="@drawable/login_button_drawable"
                android:onClick="@{vm::onAddressClick}"
                android:text="Address Detail"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/ll_shift" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
